After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 707993 - Translatable string fixes
Translatable string fixes
Status: RESOLVED FIXED
Product: gnome-software
Classification: Applications
Component: General
unspecified
Other All
: Normal minor
: ---
Assigned To: GNOME Software maintainer(s)
GNOME Software maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2013-09-12 21:12 UTC by Philip Withnall
Modified: 2013-09-13 08:39 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
ui: Add translator comments to a few strings in the UI (3.56 KB, patch)
2013-09-12 21:39 UTC, Philip Withnall
none Details | Review
application: Tweak punctuation for command line documentation (1.03 KB, patch)
2013-09-12 21:39 UTC, Philip Withnall
none Details | Review
plugins: Use ‘File System’ instead of ‘Filesystem’ (1.22 KB, patch)
2013-09-12 21:39 UTC, Philip Withnall
none Details | Review

Description Philip Withnall 2013-09-12 21:12:39 UTC
Here are a few things I spotted while doing the en_GB translation which I think could be improved.

#: ../src/gnome-software.ui.h:2
msgid "_All"
msgstr "_All"

All _what_?

#: ../src/gnome-software.ui.h:3
msgid "_Installed"
msgstr "_Installed"

As in ‘installed successfully’, or ‘software which is installed’?

#: ../src/gnome-software.ui.h:4
msgid "_Updates"
msgstr "_Updates"

Same as above: is it a verb or a noun?

#: ../src/gnome-software.ui.h:9
msgid "Picks"
msgstr "Picks"

What’s a ‘pick’? A favourite? Is it a verb or a noun?

#: ../src/gnome-software.ui.h:18
msgid "Done"
msgstr "Done"

What’s been done? :-)

#. TRANSLATORS: this is a command line option
#: ../src/gs-application.c:214
msgid "Start up mode, either 'updates', 'installed' or 'overview'"
msgstr "Start up mode: either ‘updates’, ‘installed’ or ‘overview’"

Some slight punctuation changes to use a colon and Unicode quotation marks.

#: ../src/plugins/gs-plugin-hardcoded-menu-spec.c:571
msgid "Filesystem"
msgstr "File System"

IIRC, the documentation terminology guide says we should use ‘file system’ (2 words) rather than ‘filesystem’. I might be misremembering or out of date on this though.

#: ../src/plugins/gs-plugin-hardcoded-menu-spec.c:615
msgid "Telephony Tools"
msgstr "Telephony Tools"

This looks like a potential duplicate of the ‘Telephony’ string a bit further up in the same file.
Comment 1 Philip Withnall 2013-09-12 21:39:33 UTC
Created attachment 254819 [details] [review]
ui: Add translator comments to a few strings in the UI

Helps:
Comment 2 Philip Withnall 2013-09-12 21:39:36 UTC
Created attachment 254820 [details] [review]
application: Tweak punctuation for command line documentation

Helps:
Comment 3 Philip Withnall 2013-09-12 21:39:39 UTC
Created attachment 254821 [details] [review]
plugins: Use ‘File System’ instead of ‘Filesystem’

See: https://developer.gnome.org/gdp-style-guide/stable/gnome-glossary-generic-terms.html.en

Closes:
Comment 4 Richard Hughes 2013-09-13 08:37:33 UTC
All applied, thanks!