plugins: Use 'File System' instead of 'Filesystem'

See: https://developer.gnome.org/gdp-style-guide/stable/gnome-glossary-generic-terms.html.en

Closes: https://bugzilla.gnome.org/show_bug.cgi?id=707993
Signed-off-by: Richard Hughes <richard@hughsie.com>